iall:
install:
test:

EXTRA_DIST = test1 test108 test117 test127 test20 test27 test34 test46	   \
 test10 test109 test118 test13 test200 test28 test36 test47 test100 test11 \
 test119 test14 test201 test29 test37 test5 test101 test110 test12 test15  \
 test202 test3 test4 test6 test102 test111 test120 test16 test21 test30	   \
 test7 test103 test112 test121 test17 test22 test300 test8 test104 test113 \
 test122 test18 test23 test301 test9 test105 test114 test123 test19 test24 \
 test302 test43 test31 test106 test115 test124 test190 test25 test303	   \
 test44 test38 test107 test116 test125 test2 test26 test33 test45 test126  \
 test304 test39 test32 test128 test48 test306 test130 test131 test132	   \
 test133 test134 test135 test305 test49 test50 test51 test52 test53 test54 \
 test55 test56 test500 test501 test502 test503 test504 test136 test57	   \
 test137 test138 test58 test139 test140 test141 test59 test60 test61	   \
 test142 test143 test62 test63 test64 test65 test66 test144 test145 test67 \
 test68 test41 test40 test42 test69 test70 test71 test72 test73 test146	   \
 test505 test74 test75 test76 test77 test78 test147 test148 test506 test79 \
 test80 test81 test82 test83 test84 test85 test86 test87 test507 test149   \
 test88 test89 test90 test508 test91 test92 test203 test93 test94 test95   \
 test510 test97 test98 test99 test150 test151 test152 test153 test154	   \
 test155 test156 test157 test158 test159 test511 test160 test161 test162   \
 test163 test164 test512 test165 test166 test167 test168 test169 test170   \
 test171 test172 test204 test205 test173 test174 test175 test176 test177   \
 test513 test514 test178 test179 test180 test181 test182 test183 test184   \
 test185 test186 test187 test188 test189 test191 test192 test193 test194   \
 test195 test196 test197 test198 test515 test516 test517 test518 test210   \
 test211 test212 test220 test221 test222 test223 test224 test206 test207   \
 test208 test209 test213 test240 test241 test242 test519 test214 test215   \
 test216 test217 test218 test199 test225 test226 test227 test228 test229   \
 test233 test234 test235 test236 test520 test237 test238 test239 test243   \
 test245 test246 test247 test248 test249 test250 test251 test252 test253   \
 test254 test255 test521 test522 test523 test256 test257 test258 test259   \
 test260 test261 test262 test263 test264 test265 test266 test267 test268   \
 test269 test270 test271 test272 test273 test274 test275 test524 test525   \
 test276 test277 test526 test527 test528 test530 DISABLED test278 test279  \
 test531 test280 test529 test532 test533 test534 test535 test281 test537   \
 test282 test283 test284 test538 test285 test286 test307 test308 test287   \
 test400 test288 test600 test601 test602 test603 test401 test402 test290   \
 test291 test292 test293 test403 test404 test405 test604 test605 test606   \
 test607 test608 test609 test294 test295 test296 test297 test298 test610   \
 test611 test612 test406 test407 test408 test409 test613 test614 test700   \
 test701 test702 test704 test705 test703 test706 test707 test350 test351   \
 test352 test353 test289 test540 test354 test231 test1000 test1001	   \
 test1002 test1003 test1004 test1005 test1006 test615 test1007 test541	   \
 test1010 test1011 test1012 test542 test543 test536 test1008 test1009	   \
 test2000 test2001 test2002 test2003 test35 test544 test545 test2004	   \
 test546 test1013 test1014 test1015 test547 test548 test549 test550	   \
 test551 test552 test1016 test1017 test1018 test1019 test1020 test553	   \
 test1021 test1022 test1023 test309 test616 test617 test618 test619	   \
 test620 test621 test622 test623 test624 test625 test626 test627 test554   \
 test1024 test1025 test555 test1026 test1027 test1028 test1029 test1030	   \
 test556 test557 test1031 test628 test629 test630 test631 test632 test1032 \
 test1033 test539 test1034 test1035 test1036 test1037 test1038 test1039	   \
 test1040 test1041 test1042 test1043 test1044 test1045 test1046 test1047   \
 test1048 test1049 test1050 test1051 test1052 test1053 test1054 test1055   \
 test1056 test1057 test1058 test1059 test1060 test1061 test1062 test1063   \
 test1064 test1065 test1066 test1067 test1068 test1069 test1070 test1071   \
 test1072 test1073 test1074 test1075 test1076 test1077 test1078 test1079   \
 test1080 test1081 test1082 test1083 test1084 test1085 test633 test634	   \
 test635 test636 test637 test558 test559 test1086 test1087 test1088	   \
 test574 test575 test576 test577 test1113 test1114 test1089 test1090	   \
 test1091 test1092 test1093 test1094 test1095 test1096 test1097 test560	   \
 test561 test1098 test1099 test562 test563 test1100 test564 test1101	   \
 test1102 test1103 test1104 test299 test310 test311 test312 test1105	   \
 test565 test800 test1106 test801 test566 test802 test803 test1107	   \
 test1108 test1109 test1110 test1111 test1112 test129 test567 test568	   \
 test569 test570 test571 test572 test804 test805 test806 test807 test573   \
 test313 test1115 test578 test579 test1116 test1200 test1201 test1202	   \
 test1203 test1117 test1118 test1119 test1120

filecheck:
	@mkdir test-place; \
	cp "$(top_srcdir)"/tests/data/test[0-9]* test-place/; \
	rm test-place/*~; \
	for f in $(EXTRA_DIST); do \
	  if test -f "$(top_srcdir)/tests/data/$$f"; then \
	    rm -f "test-place/$$f"; \
	  else \
	    echo "$$f is listed but missing!"; \
	  fi \
	done; \
	echo "Local files not present in EXTRA_DIST:" ; \
	ls test-place; \
	! ls test-place | grep . >/dev/null ; \
	RC=$$? ; \
	rm -rf test-place ; \
	exit $$RC

show:
	@echo $(EXTRA_DIST)
